# fastapi-template

./: .gitignore  Makefile  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  readme.md  result.json
config/: config.dev.yml  config.prod.yml
core/: app.py
scripts/: parse_gg_web.py
ub_backend/: main.py  pyproject.toml  result.json
ub_backend/alembic/: env.py
ub_backend/alembic/versions/: 0ab0185fa7f8_add_order_and_goods.py  c05272d8769c_add_refresh_token_table.py  c57600b12481_add_user_table.py  dc898a36423f_add_token_table.py
ub_backend/api/: depends.py  routes.py
ub_backend/api/v1/: all_routes.py
ub_backend/api/v1/auth/: routes.py  schema.py
ub_backend/api/v1/good/: routes.py  schema.py
ub_backend/api/v1/order/: routes.py  schema.py
ub_backend/api/v1/user/: routes.py  schema.py
ub_backend/app/exception/: common.py  jwt.py
ub_backend/app/model/: full_order.py  good.py  order.py  token.py  user.py
ub_backend/app/model/enum/: __init__.py  cat_mode.py  color.py  order_type.py
ub_backend/app/model/mixins/: __init__.py  price.py  timestamp.py  uuid.py
ub_backend/app/service/: jwt_service.py  telegram_service.py
ub_backend/core/: app.py  config.py  logger.py
ub_backend/core/base/: htth_exception.py  storage.py
ub_backend/database/postgres/: db.py  transactional.py
ub_backend/database/postgres/sqlalchemy_models/: __init__.py  good.py  order.py  order_good.py  refresh_token.py  user.py
ub_backend/database/postgres/sqlalchemy_models/mixin/: __init__.py  base_token_mixin.py  id_mixin.py  uuid_mixin.py
ub_backend/database/postgres/storage/: __init__.py  good_storage.py  order_good_storage.py  order_storage.py  token_storage.py  user_storage.py
(+11 files in other folders)
